--- a/notebooks/day3_exploratory_data_analysis.ipynb
+++ b/notebooks/day3_exploratory_data_analysis.ipynb
@@ -542,6 +542,35 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Tidy Data Format\n",
+        "\n",
+        "A dataset is considered **tidy** when it follows a consistent structure that makes analysis and visualization easier.  \n",
+        "In tidy data:  \n",
+        "\n",
+        "- **Each variable** forms a **column**.  \n",
+        "- **Each observation (measurement)** forms a **row**.  \n",
+        "- **Each type of observational unit** forms a **table**.  \n",
+        "\n",
+        "For example, in the Titanic dataset:  \n",
+        "- Variables: `age`, `fare`, `sex`, `class`, `survived` → each has its own column.  \n",
+        "- Observations: each passenger → one row with their age, fare, sex, etc.  \n",
+        "- Dataset: passengers → stored together in a single table.  \n",
+        "\n",
+        "### Why tidy data matters\n",
+        "- Functions in **pandas**, **seaborn**, and other Python libraries are designed with tidy data in mind.  \n",
+        "- It makes filtering, grouping, and visualization straightforward.  \n",
+        "- Untidy data (e.g., multiple variables in one column, or one variable spread across multiple columns) often needs to be **reshaped** before analysis.  \n",
+        "\n",
+        "In short: **tidy data = one row per measurement, one column per variable**. This consistency is what makes tools like pandas and seaborn so effective.\n"
+      ],
+      "metadata": {
+        "id": "orc6IWU43JVm"
+      },
+      "id": "orc6IWU43JVm"
+    },
+    {
+      "cell_type": "markdown",
       "id": "5fb2f8b2",
       "metadata": {
         "id": "5fb2f8b2"
@@ -573,23 +602,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "ad963e3b",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 199
         },
         "id": "ad963e3b",
-        "outputId": "2db8df02-dfa8-464f-af64-c21967fbd12e"
+        "outputId": "ea8debb8-a6b2-4dec-c814-a68213c2b9e5"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mean age: 29.69911764705882\n",
-            "Median age: 28.0\n",
-            "Mode embark_town: Southampton\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'titanic' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-373831952.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Mean, Median, Mode examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mean age:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitanic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Median age:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitanic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mode embark_town:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitanic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'embark_town'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'titanic' is not defined"
           ]
         }
       ],
@@ -608,74 +640,11 @@
         "titanic['embark_town'].value_counts()"
       ],
       "metadata": {
-        "id": "Xu_-0NoM1XFt",
-        "outputId": "3f4ad3a0-a890-4cfe-c36f-d6fbc30881e1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 209
-        }
+        "id": "Xu_-0NoM1XFt"
       },
       "id": "Xu_-0NoM1XFt",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "embark_town\n",
-              "Southampton    644\n",
-              "Cherbourg      168\n",
-              "Queenstown      77\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>embark_town</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Southampton</th>\n",
-              "      <td>644</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Cherbourg</th>\n",
-              "      <td>168</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Queenstown</th>\n",
-              "      <td>77</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -5239,20 +5208,66 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Pandas `pivot` – Reshaping Data for Better Insights\n",
+        "\n",
+        "The `pivot` function in **pandas** reshapes data by turning unique values from one column into **new columns**, while using other columns for the index and the cell values.  \n",
+        "This is especially useful for creating **summary tables** that are easier to read and interpret.\n",
+        "\n",
+        "### How it works\n",
+        "- **index** → the column to use as row labels.  \n",
+        "- **columns** → the column whose unique values become new column headers.  \n",
+        "- **values** → the column that fills the table cells.  \n",
+        "\n",
+        "### Example with Titanic\n",
+        "Suppose we want to compare **average fares** by **class** and **sex**:\n",
+        "\n",
+        "```python\n",
+        "pivot_table = titanic.pivot(\n",
+        "    index=\"class\",\n",
+        "    columns=\"sex\",\n",
+        "    values=\"fare\"\n",
+        ")\n",
+        "print(pivot_table)\n"
+      ],
+      "metadata": {
+        "id": "XcBCz9tR3j2r"
+      },
+      "id": "XcBCz9tR3j2r"
+    },
+    {
+      "cell_type": "markdown",
       "id": "259deba8",
       "metadata": {
         "id": "259deba8"
       },
       "source": [
-        "#### Pivot Tables\n",
+        "### Pivot Tables\n",
         "\n",
         "Pivot tables provide a multi-dimensional summary of data, allowing you to aggregate and analyze data across multiple categorical variables simultaneously.\n",
         "\n",
-        "#### Crosstab in Pandas\n",
+        "### Crosstab in Pandas\n",
         "\n",
         "Crosstab is a specific type of pivot table that computes a simple cross-tabulation of two (or more) factors. It is often used to analyze the relationship between categorical variables.\n",
         "\n",
-        "Below we analyze survival rates by passenger class and gender."
+        "#### Pandas `crosstab` – Quick Frequency Tables\n",
+        "\n",
+        "The `crosstab` function in **pandas** is a fast way to compute **frequency tables** (counts or proportions) across two or more categorical variables.  \n",
+        "It is very similar to a pivot table, but it is **designed specifically for counting and cross-tabulation**.\n",
+        "\n",
+        "#### How it works\n",
+        "- By default, `crosstab` counts the number of occurrences for each combination of categories.  \n",
+        "- You can also normalize (to show proportions) or apply other aggregation functions.\n",
+        "\n",
+        "#### Example with Titanic\n",
+        "Count how many passengers survived by sex:\n",
+        "\n",
+        "```python\n",
+        "pd.crosstab(titanic['sex'], titanic['survived'])\n",
+        "\n",
+        "\n",
+        "Below we analyze survival rates by passenger class and gender.\n",
+        "\n"
       ]
     },
     {
