--- a/notebooks/ideas_data_visualization.ipynb
+++ b/notebooks/ideas_data_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📅 Day 4 — Data Visualization in Python\n",
+    "# 📅 Ideas — Data Visualization in Python\n",
     "\n",
     "**📚 Instruction (3h)**  \n",
     "- 🖌 matplotlib basics  \n",
