Added Class Exercise

--- a/notebooks/day4_Irises_Data_Analysis_Workflow_Classification_Clustering.ipynb
+++ b/notebooks/day4_Irises_Data_Analysis_Workflow_Classification_Clustering.ipynb
@@ -1887,7 +1887,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 998
         },
         "id": "KGFGUPVRDjAF",
         "outputId": "e612994e-555f-41b6-9872-fe894478c6df"
@@ -4509,7 +4509,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 998
         },
         "id": "C7ZpP4plcU82",
         "outputId": "0f1c492e-0e69-4901-9f15-3f5e6d8bdda4"
@@ -4799,7 +4799,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 980
         },
         "id": "aqCmcnYDDjAU",
         "outputId": "cea97369-d0fb-40d0-e3a9-e37df1e11704"
@@ -5251,7 +5251,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 998
         },
         "id": "CRix7MNrDjAd",
         "outputId": "22aa2a7c-5ce8-426d-ce34-15d7febce140"
@@ -7293,7 +7293,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 159
+          "height": 146
         },
         "id": "M-irqeiyDjAm",
         "outputId": "24ddc3c4-c2ec-4b5b-ff8e-c32e961a6be5"
@@ -9555,6 +9555,51 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 🧑‍💻 Class Exercise (30–45 min)\n",
+        "\n",
+        "Work through the following tasks using the **Iris dataset** and scikit-learn:\n",
+        "\n",
+        "- 🔄 **Try a different train/test split**  \n",
+        "  - Experiment with 60/40, 70/30, or 80/20 splits.  \n",
+        "  - Observe how model performance changes.  \n",
+        "\n",
+        "- 🤖 **Train a different model**  \n",
+        "  - Choose a classifier not yet used in the notebook (e.g., Support Vector Machine, Naive Bayes, or Gradient Boosting).  \n",
+        "  - Compare results with the earlier models.  \n",
+        "\n",
+        "- ⚙️ **Perform hyperparameter tuning with GridSearchCV**  \n",
+        "  - Select one model (e.g., Decision Tree, KNN, or SVM).  \n",
+        "  - Use `GridSearchCV` to find the best parameters.  \n",
+        "  - Report the best parameters and resulting accuracy.  \n",
+        "\n",
+        "- 📊 **Evaluate the model**  \n",
+        "  - Generate a confusion matrix.  \n",
+        "  - Print a classification report (precision, recall, f1-score).  \n",
+        "  - Compare performance across models and parameter settings.  \n",
+        "\n",
+        "- 🎨 **Visualize results**  \n",
+        "  - Create plots showing decision boundaries (if possible in 2D projections).  \n",
+        "  - Plot confusion matrix as a heatmap using `seaborn`.  \n",
+        "  - Summarize accuracy scores in a bar chart for easy comparison.  \n"
+      ],
+      "metadata": {
+        "id": "B4RgNQQ0-RJY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO do the above tasks - feel free to add relevant context for LLM assistance from Gemini or other tools"
+      ],
+      "metadata": {
+        "id": "xVwkS17u-Zk-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "t9I0Qw8jDjAx"
       },
@@ -10073,7 +10118,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "venv",
