--- a/notebooks/day4_Irises_Data_Analysis_Workflow_Classification_Clustering.ipynb
+++ b/notebooks/day4_Irises_Data_Analysis_Workflow_Classification_Clustering.ipynb
@@ -10043,6 +10043,42 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 🔮 Clustering — General Ideas\n",
+        "\n",
+        "There is another technique we can use on this particular data set - that actually does not require ANY answers.\n",
+        "\n",
+        "\n",
+        "Clustering is an **unsupervised learning** technique where the goal is to group data points into clusters based on their similarity. Unlike classification, clustering does **not use labels**; instead, the algorithm discovers natural groupings within the data.\n",
+        "\n",
+        "### Key Concepts\n",
+        "- 📦 **Unsupervised learning** — The algorithm learns patterns without predefined categories.  \n",
+        "- 🎯 **Objective** — Maximize similarity within clusters while maximizing differences between clusters.  \n",
+        "- 🔑 **No ground truth** — Unlike classification, there is no \"correct\" answer to compare against.  \n",
+        "\n",
+        "### Common Clustering Methods\n",
+        "- **k-Means** — Divides data into *k* clusters by minimizing the distance to cluster centroids.  \n",
+        "- **Hierarchical Clustering** — Builds a tree-like structure of nested clusters.  \n",
+        "- **DBSCAN** — Groups points based on density, useful for non-spherical clusters and noise handling.  \n",
+        "\n",
+        "### Typical Workflow\n",
+        "1. **Preprocess data** — Scale/normalize features to avoid bias from differing scales.  \n",
+        "2. **Choose a clustering method** — Select algorithm based on data type and distribution.  \n",
+        "3. **Determine number of clusters** — Methods like the *elbow method* or *silhouette score* help.  \n",
+        "4. **Run clustering** — Assign data points to clusters.  \n",
+        "5. **Interpret results** — Visualize clusters, analyze centroids or structures.  \n",
+        "\n",
+        "### Reflection\n",
+        "- Clustering is useful for **exploration** (finding hidden structure, customer segmentation, anomaly detection).  \n",
+        "- Since there are no labels, evaluation is less straightforward — metrics like **silhouette score** or **intra-/inter-cluster distances** are often used.  \n",
+        "- Clustering can provide insights but requires careful interpretation.  \n"
+      ],
+      "metadata": {
+        "id": "A7jCC7ehAAV1"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "2vb_HrpMDjA1"
       },
