--- a/notebooks/day4_Irises_Data_Analysis_Workflow_Classification_Clustering.ipynb
+++ b/notebooks/day4_Irises_Data_Analysis_Workflow_Classification_Clustering.ipynb
@@ -10083,12 +10083,12 @@
         "iris_data.head()"
       ],
       "metadata": {
-        "id": "SLv_0XTABH4C",
-        "outputId": "13841bd2-b6e8-44c0-abc9-65376a37ac2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "SLv_0XTABH4C",
+        "outputId": "13841bd2-b6e8-44c0-abc9-65376a37ac2b"
       },
       "execution_count": 228,
       "outputs": [
@@ -10472,11 +10472,11 @@
         "print(report)\n"
       ],
       "metadata": {
-        "id": "SiwRESXFAXjJ",
-        "outputId": "dc5bf424-5b68-4ea5-9767-6dfc123c60ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SiwRESXFAXjJ",
+        "outputId": "dc5bf424-5b68-4ea5-9767-6dfc123c60ff"
       },
       "execution_count": 229,
       "outputs": [
@@ -10553,6 +10553,26 @@
         "\n",
         "**Seaborn** has a [basic tutorial](http://stanford.edu/~mwaskom/software/seaborn/tutorial.html) covering most of the statistical plotting features."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Om7JmCZHCu4p"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Choosing the right Estimator\n",
+        "\n",
+        "Scikit-learn offers a great \"cheat sheet\" for determining what we can do with our data:\n",
+        "\n",
+        "https://scikit-learn.org/stable/machine_learning_map.html"
+      ],
+      "metadata": {
+        "id": "2APqxYirChRa"
+      }
     },
     {
       "cell_type": "markdown",
