--- a/notebooks/ideas_storytelling_dashboards_ai.ipynb
+++ b/notebooks/ideas_storytelling_dashboards_ai.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📅 Day 5 — Storytelling, Dashboards & AI in Data Analysis\n",
+    "# 📅 Ideas — Storytelling, Dashboards & AI in Data Analysis\n",
     "\n",
     "**📚 Instruction (3h)**  \n",
     "- 📖 Turning analysis into a narrative  \n",
