--- a/notebooks/day5_end_to_end_machine_learning_project.ipynb
+++ b/notebooks/day5_end_to_end_machine_learning_project.ipynb
@@ -248,10 +248,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "xUzGDUA7Zs8G",
-        "outputId": "718f04b3-0080-40dd-815a-5f4492a1ebf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "718f04b3-0080-40dd-815a-5f4492a1ebf6"
       },
       "outputs": [
         {
@@ -297,7 +297,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "IV9RgMDEZs8H",
         "outputId": "d4e0c60e-2327-44a9-92ad-2cead89bb949"
@@ -776,7 +776,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 320
         },
         "id": "U5yTL8ajZs8J",
         "outputId": "8d98a603-dac7-4155-f829-35086888e828"
@@ -1206,7 +1206,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 795
+          "height": 749
         },
         "id": "fpfjrhc0Zs8L",
         "outputId": "3a3ea001-0855-4bdd-ea4c-6f15ebb359a1"
@@ -2429,7 +2429,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 794
+          "height": 747
         },
         "id": "gm3O4HU0Zs8n",
         "outputId": "5b6b37a7-caa8-45d7-9c3f-5e53097da21d"
@@ -13991,6 +13991,56 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 🏡 Class Exercise: Working with the California Housing Dataset (30–45 minutes)\n",
+        "\n",
+        "In this exercise, you will practice preparing and analyzing the California Housing dataset before moving on to advanced pipelines and evaluation. Work step by step and explore the dataset carefully.\n",
+        "\n",
+        "### Tasks\n",
+        "\n",
+        "- **Load & Inspect Data**\n",
+        "  - Load the California Housing dataset into a Pandas DataFrame.\n",
+        "  - Display the first few rows and examine the column names.\n",
+        "  - Identify which column is the target variable.\n",
+        "\n",
+        "- **Explore Features**\n",
+        "  - Compute basic statistics (`.describe()`) for all numerical columns.\n",
+        "  - Plot histograms for at least **two features** and discuss what you notice.\n",
+        "  - Check correlations between `median_house_value` and at least two other features.\n",
+        "\n",
+        "- **Data Cleaning**\n",
+        "  - Identify if there are any missing values in the dataset.\n",
+        "  - Suggest a strategy to handle them (e.g., drop, fill with mean/median, etc.).\n",
+        "  - Apply your chosen strategy.\n",
+        "\n",
+        "- **Train/Test Split**\n",
+        "  - Perform a train/test split of the dataset (e.g., 80/20 or 70/30).\n",
+        "  - Verify the shape of the resulting sets.\n",
+        "\n",
+        "- **First Model Attempt**\n",
+        "  - Train a **Linear Regression** model using Scikit-Learn on your training set.\n",
+        "  - Predict on the test set and compute **RMSE**.\n",
+        "  - Briefly reflect: does the RMSE seem large or small relative to target values?\n",
+        "\n",
+        "### Deliverables\n",
+        "\n",
+        "- Your code cells and outputs in the notebook.\n",
+        "- Short written notes or comments in Markdown cells summarizing:\n",
+        "  - What patterns you observed in the features.\n",
+        "  - What cleaning choices you made and why.\n",
+        "  - How well the first model performed.\n",
+        "\n",
+        "💡 **Tip:** Focus on exploration and careful observation — performance will improve later once we learn about pipelines and feature engineering.\n",
+        "\n",
+        "\n",
+        "Note: We already did most of this in the class, it is up to you to put it together in a single or few related cells."
+      ],
+      "metadata": {
+        "id": "CgU1zVAQyGWI"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "f6fCDBxhZs9D"
       },
@@ -18362,7 +18412,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
